--- a/hw2/p1q1.ipynb
+++ b/hw2/p1q1.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,20 +59,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['0.0', '0.0', '0.0', '0.0', '6.825', '6.825', '6.825', '6.825', '6.825', '6.916', '6.916', '6.916', '6.916', '6.916', '6.916', '7.008', '7.008', '7.008', '7.008', '7.008', '6.912', '6.912', '6.912', '6.912', '7.0', '7.0', '7.0', '7.0', '7.0', '7.05', '7.05', '7.05', '7.05', '7.05', '7.046', '7.046', '7.046', '7.046', '7.046', '5.107', '5.107', '5.107', '5.107', '5.107', '4.153', '4.153', '4.153', '4.153', '4.153', '4.027', '4.027', '4.027', '4.027', '4.027', '4.019', '4.019', '4.019', '4.019', '4.019', '4.019', '3.985', '3.985', '3.985', '3.985', '3.985', '4.0', '4.0', '4.0', '4.0', '4.012', '4.012', '4.012', '4.012', '4.012', '3.973', '3.973', '3.973', '3.973', '3.973', '3.947', '3.947', '3.947', '3.947', '3.947', '3.954', '3.954', '3.954', '3.954', '3.954', '5.729', '5.729', '5.729', '5.729', '5.729', '7.309', '7.309', '7.309', '7.309', '7.309', '7.237']\n"
+      "['W', '0.0', '0.0', '0.0', '8.848', '8.848', '8.848', '8.848', '8.848', '9.206', '9.206', '9.206', '9.206', '9.206', '8.722', '8.722', '8.722', '8.722', '8.722', '8.615', '8.615', '8.615', '8.615', '8.615', '9.252', '9.252', '9.252', '9.252', '9.252', '9.252', '8.775', '8.775', '8.775', '8.775', '8.775', '8.962', '8.962', '8.962', '8.962', '9.145', '9.145', '9.145', '9.145', '9.145', '9.321', '9.321', '9.321', '9.321', '9.321', '8.687', '8.687', '8.687', '8.687', '8.687', '8.66', '8.66', '8.66', '8.66', '8.66', '8.767', '8.767', '8.767', '8.767', '8.767', '9.119', '9.119', '9.119', '9.119', '9.119', '8.973', '8.973', '8.973', '8.973', '8.973', '8.817', '8.817', '8.817', '8.817', '8.817', '8.744', '8.744', '8.744', '8.744', '8.744', '9.359', '9.359', '9.359', '9.359', '9.359', '9.313', '9.313', '9.313', '9.313', '9.313', '9.199', '9.199', '9.199', '9.199', '9.199', '9.199', '8.867']\n"
      ]
     }
    ],
    "source": [
     "print(watts)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -96,6 +111,28 @@
     "temp5 = temp5[1:]\n",
     "temp6 = temp6[:]\n",
     "temp7 = temp7[:]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "int() argument must be a string, a bytes-like object or a number, not 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-14682566da9d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mwatts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwatts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: int() argument must be a string, a bytes-like object or a number, not 'list'"
+     ]
+    }
+   ],
+   "source": [
+    "for i in len(watts):\n",
+    "    watts[i] = int(watts[])"
    ]
   },
   {
@@ -170,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
