Energy calculations for p1q4

--- a/hw2/p1q3.ipynb
+++ b/hw2/p1q3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -166,26 +166,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.348839999999994\n"
+      "7.75823913043479\n"
      ]
     }
    ],
    "source": [
     "# average power \n",
     "average_power = sum(watts) / len(watts)\n",
-    "print(average)"
+    "print(average_power)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -228,11 +228,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1427.5160000000014\n"
+     ]
+    }
+   ],
    "source": [
-    "# Energy"
+    "# Energy\n",
+    "consumption = sum(watts)\n",
+    "print(consumption*0.2) # 0.2 is our sampling rate"
    ]
   },
   {
@@ -244,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -347,26 +357,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.348839999999994\n"
+      "8.5518103896104\n"
      ]
     }
    ],
    "source": [
     "# average power \n",
     "average_power = sum(watts) / len(watts)\n",
-    "print(average)"
+    "print(average_power)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -409,12 +419,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1316.9788000000017\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Energy\n",
+    "consumption = sum(watts)\n",
+    "print(consumption*0.2) # 0.2 is our sampling rate"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Energy\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
